[tool.poetry]
name = "ectojks_python"
version = "0.1.0"
description = "Assets for being used into ectojks through shared pipelines"
authors = ["Jonhnatha Trigueiro <joepreludian@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
